=Modified Portfolio Page to Projects Page

--- a/views/projects.hbs
+++ b/views/projects.hbs
@@ -2,11 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>My Portfolio of my Apps</title>
+    <title>My Projects</title>
   </head>
   <body>
     {{> header}}
-    <p>Here is a list of my apps:</p>
+    <p>Here is a list of my projects:</p>
       <ol>
         <li><a href="https://tranquil-everglades-94212.herokuapp.com/">My First Heroku Deploy</a></li>
       </ol>
